tests/type_errors/int_where_float_expected.nos
# expect_error: type mismatch
# Test: passing Int where Float is explicitly expected

computeFloat(x: Float) = x * 2.0

main() = computeFloat(42)
